css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
    box-sizing: border-box;
 
}

*, *:before, *:after {
    box-sizing: inherit;

}

img {
 dispay: block;
 width: 100%;
}

header {
    background-color: #ccc;
    overflow: hidden;
}

footer {
    background-color: #DDDDDD;
    overflow: hidden;
}

body {
    padding: 0;
    margin: 0;
}

h1 { 
    padding: 0;
    margin: 0;
    font-family: sans-serif;
}

.nav {
    margin: 0;
    padding: 0;
    list-style-type: none;
    font-family: sans-serif; 
}

.nav a,
.nav a:visited{
    text-decoration:none;
    color: #0074D9;

}


@media only screen and (min-width: 22em) {
    
    .title {
        text-align: center;
    }
    
    .nav li {
    display: inline-block;
    border: 0;
   
    }
    
    .nav {
        text-align: center;
    }
    
}

@media only screen and (min-width: 50em) {
    
    h1 { 
    float: left;
        
}
    .nav {
    float: left;
    
    }
}

.lightgrey {
    background-color: #e2e2e2;
}

